# quantis-qrng-tls-pq-bench

./: .gitignore  .gitmodules  README.md
h2load-bench/: Dockerfile  README.md  benchmark_results_parser.py  h2load-benchmarks.sh  requirements.txt
h2load-bench/data_analysis/: data_analysis.ipynb  stats_tests.ipynb
h2load-bench/data_analysis/data_processing/: functions.py
quantis-qrng-nginx/: Dockerfile  README.md  env.list
quantis-qrng-nginx/dependencies/: README.md  install_quantis_libraries.sh  rand_lib.c
quantis-qrng-nginx/dependencies/pcie-chip-20.2.4-linux/: Changelog.txt  License.txt
quantis-qrng-nginx/dependencies/pcie-chip-20.2.4-linux/Drivers/linux/: load_driver.sh
quantis-qrng-nginx/dependencies/pcie-chip-20.2.4-linux/Drivers/linux/driver/: .gitignore  Makefile  idq-rng.c  xdma-core.c  xdma-sgm.c
quantis-qrng-nginx/dependencies/pcie-chip-20.2.4-linux/Drivers/linux/include/: idq-rng.h  perfmon_parameters.h  quantis_ioctl.h  version.h  xbar_sys_parameters.h  xdma-core.h  xdma-sgm.h
quantis-qrng-nginx/dependencies/pcie-chip-20.2.4-linux/Drivers/linux/udev/: idq-quantis.rules
quantis-qrng-nginx/dependencies/pcie-chip-20.2.4-linux/Libs-Apps/: CMakeLists.txt  clean_cmake.sh
quantis-qrng-nginx/dependencies/pcie-chip-20.2.4-linux/Libs-Apps/CMake/: CompilersFlags.cmake  FindDl.cmake  FindJNI.cmake  FindOpenSSL.cmake  FindRt.cmake  FindUSB1.cmake  FindZ.cmake  InstallDirs.cmake  LibFindMacros.cmake  QuantisPackages.cmake
quantis-qrng-nginx/dependencies/pcie-chip-20.2.4-linux/Libs-Apps/Quantis/: CMakeLists.txt  Quantis.hpp  QuantisLibConfig.h.in  QuantisPci_Unix.c  QuantisUsb_Unix.c  Quantis_Compat.c  Quantis_Compat.h  Quantis_Cpp.cpp  Quantis_Internal.h  Quantis_Java.cpp  Quantis_Java.h  Quantis_random_device.cpp  Quantis_random_device.hpp  msc_stdint.h  resource.h
quantis-qrng-nginx/dependencies/pcie-chip-20.2.4-linux/Libs-Apps/QuantisExtensions/: CMakeLists.txt  QuantisExtensionsLibConfig.h.in  QuantisExtractor.h  QuantisExtractor.hpp  QuantisExtractor_C.c  QuantisExtractor_Cpp.cpp  QuantisExtractor_Java.cpp  QuantisExtractor_Java.h  resource.h
quantis-qrng-nginx/dependencies/read_shm/: read_shm.c
quantis-qrng-nginx/measure_rand_bytes/: agg_measurements.py  measure_container.sh  measurements_wrapper.sh  requirements.txt
quantis-qrng-nginx/measure_rand_bytes/results/aggregated/: measurements.csv
rand_bytes_speed/: README.md
rand_bytes_speed/bash/: count_random.sh
rand_bytes_speed/c/: CMakeLists.txt  rand_bytes_speed_interval.c  rand_bytes_speed_vs_time.c
rand_bytes_speed/rust/: Cargo.toml  results_1685711042.csv
